--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node server.js",
         "watch": "nodemon",
-        "seed": "node seeders/seeds.js"
+        "seed": "node seeders/seeds.js",
+        "build": "webpack --config webpack.config.js"
     },
     "keywords": [],
     "engines": {
